2007-06-17  Inge Wallin  <inge@lysator.liu.se>

	Name change to improve readability
	* src/lib/placemark.h (class PlaceMark): m_rect -> m_textRect
	* src/lib/placemark.cpp (PlaceMark): Use new name

2007-06-16  Inge Wallin  <inge@lysator.liu.se>

	Simplify and clean the code in preparation for other changes.
	* src/lib/placemarkpainter.cpp (paintPlaceFolder): Simplify the
	code a lot, and in particular use pre-increments for iterators,
	which makes it a lot faster.

	Change name of class PlaceContainer into PlaceMarkContainer.
	* src/lib/placecontainer.h:   new name: PlaceMarkContainer.h
	* src/lib/placecontainer.cpp: new name: PlaceMarkContainer.cpp
	* src/lib/CMakeLists.txt: reflect the name change
	* src/lib/MarbleModel.h,       src/lib/MarbleModel.cpp,
	* src/lib/MarbleWidget.cpp,
	* src/lib/kml/KMLDocument.cpp,
	* src/lib/kml/KMLFolder.cpp,
	* src/lib/placemarkmanager.h,  src/lib/placemarkmanager.cpp,
	* src/lib/placemarkmodel.h,    src/lib/placemarkmodel.cpp,
	* src/lib/placemarkpainter.h,  src/lib/placemarkpainter.cpp,
	* src/lib/xmlhandler.h,        src/lib/xmlhandler.cpp:
	  Use the new names.

2007-06-16  Murad Tagirov  <tmurad@gmail.com>

    Created KMLPointParser which parses coordinates
    tag and sets parsed lon and lat to KMLPlaceMark.
    * src/lib/kml/KMLPointParser.{h,cpp} new file
    * src/lib/kml/KMLPlaceMark.{h,cpp}
    * src/lib/kml/KMLPlaceMarkParser.{h,cpp}

    Moved "deg2rad" constant from xmlhandler to GeoPoint.
    * src/lib/xmlhandler.cpp
    * src/lib/GeoPoint.cpp

    Added "m_parsed" field to parser classes to avoid
    parsing of incorrect tag sequences.
    * src/lib/kml/KMLDocumentParser.{h,cpp}
    * src/lib/kml/KMLFeatureParser.{h,cpp}

    Updated class diagram to show relations between
    parser classes. Added documentation for some classes
    * projects/kml/KMLClasses.xmi

2007-06-16  Inge Wallin  <inge@lysator.liu.se>

	Fix Krazy issue 22: Check for spelling errors